--- a/generic.html
+++ b/generic.html
@@ -39,7 +39,7 @@
 									<h3>Aishvarya Vijayasekar 👩‍⚕️</h3>
 									<p>I'm an MBBS Undergrad doing my senior year here at Chennai, India. Digital art is something that I picked up during the quarantine. It kept me sane and happy. And I'm glad I could share the spirit with a few other souls.</p>
 								</header>
-								<div class="image main"><img src="images/Aishu Main.jpeg" alt="" /></div>
+								<div class="image main"></div><a href="https://www.instagram.com/aishvarya_vijayasekar/" class="image main"><img src="images/Aishu Main.jpeg" alt="" /></a></div>
 								<h3>Ummm... That's pretty much it.</h3>
 							</section>
 
