--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://www.instagram.com/joey_tribbiani_22/">Joel</a></h2>
+									</header>
+									<a href="https://www.instagram.com/joey_tribbiani_22/" class="image fit"><img src="images/14.jpeg" alt="" /></a>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://www.instagram.com/_thanioruvan_/">Ajith Kumar</a></h2>
 									</header>
 									<a href="https://www.instagram.com/_thanioruvan_/" class="image fit"><img src="images/3.jpeg" alt="" /></a>
